[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["LDG - DGit <hi-ldg@dgit.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
Pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
